--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.8.3",
+    "typescript": "^4.1.2",
     "validator": "^12.1.0"
   },
   "devDependencies": {
