--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Contains code for visualizer API Backend ",
   "main": "app.js",
   "scripts": {
-    "start": "node dist/start.js",
+    "start": "ts-node src/start.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.8.3",
+    "ts-node": "^9.0.0",
     "typescript": "^4.1.2",
     "validator": "^12.1.0"
   },
