--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 node_modules
 ./*/node_modules
 */node_modules
-creds.ts
 dist/
 src/public
 src/res.json
 package-lock.json
 src/Fetcher/cred.ts
 utils/*.sh
+.env
+*.log
+tsconfig.tsbuildinfo
