--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.5.36",
-    "@types/node": "^13.1.1",
+    "@types/node": "^13.1.1"
   }
 }
