--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "author": "osama",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.2",
+    "@types/mongoose": "^5.5.36",
+    "@types/node": "^13.1.1",
     "axios": "^0.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -24,10 +28,6 @@
     "validator": "^12.1.0"
   },
   "devDependencies": {
-    "@types/d3-time": "^1.0.10",
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.2",
-    "@types/mongoose": "^5.5.36",
-    "@types/node": "^13.1.1"
+    "@types/d3-time": "^1.0.10"
   }
 }
