--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "ts-node src/start.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/start.ts"
   },
   "keywords": [
     "trendsVisualizer",
@@ -28,6 +29,7 @@
     "validator": "^12.1.0"
   },
   "devDependencies": {
-    "@types/d3-time": "^1.0.10"
+    "@types/d3-time": "^1.0.10",
+    "nodemon": "^2.0.6"
   }
 }
