--- a/package.json
+++ b/package.json
@@ -14,20 +14,24 @@
   "author": "osama",
   "license": "ISC",
   "dependencies": {
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.2",
-    "@types/mongoose": "^5.5.36",
-    "@types/node": "^13.1.1",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.8.3",
-    "ts-node": "^9.0.0",
+    "node-cron": "^3.0.0",
     "typescript": "^4.1.2",
     "validator": "^12.1.0"
   },
   "devDependencies": {
-    "@types/d3-time": "^1.0.10"
+    "@types/cors": "^2.8.6",
+    "@types/d3-time": "^1.0.10",
+    "@types/express": "^4.17.2",
+    "@types/mongoose": "^5.5.36",
+    "@types/node": "^13.1.1",
+    "@types/node-cron": "^2.0.3",
+    "ts-node": "^9.0.0"
   }
 }
