--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "osama",
   "license": "ISC",
   "dependencies": {
+    "ts-node": "^9.0.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
