--- a/package.json
+++ b/package.json
@@ -24,15 +24,12 @@
     "mongoose": "^5.8.3",
     "node-cron": "^3.0.0",
     "typescript": "^4.1.2",
-    "validator": "^12.1.0"
-  },
-  "devDependencies": {
+    "validator": "^12.1.0",
     "@types/cors": "^2.8.6",
     "@types/d3-time": "^1.0.10",
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.5.36",
     "@types/node": "^13.1.1",
-    "@types/node-cron": "^2.0.3",
-    "ts-node": "^9.0.0"
+    "@types/node-cron": "^2.0.3"
   }
 }
