--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/mongoose": "^5.5.36",
     "@types/node": "^13.1.1",
     "@types/node-cron": "^2.0.3",
+    "@types/urlencode": "^1.1.2",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
@@ -29,9 +30,14 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.8.3",
+    "morgan": "^1.10.0",
     "node-cron": "^3.0.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2",
+    "urlencode": "^1.1.0",
     "validator": "^12.1.0"
+  },
+  "devDependencies": {
+    "@types/morgan": "^1.9.2"
   }
 }
