--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "ts-node src/start.ts",
-    "dev":  "nodemon src/start.ts",
+    "dev": "nodemon src/start.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -30,6 +30,7 @@
     "date-fns": "^2.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "heroku-ssl-redirect": "^0.1.1",
     "mongoose": "^5.8.3",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.0",
