--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,6 +17,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#017acd",
   "background_color": "#ffffff"
 }
